2005-08-15  Tor Lillqvist  <tml@novell.com>

	* gtk/updateiconcache.c: Use g_path_get_dirname() instead of
	the nonportable <libgen.h> and dirname().

2005-08-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksizegroup.c: Use object data to mark widgets and
	groups as visited, so that we avoid constant extra list
	traversals. Also allocate quarks in class_init.  (#311618,
	Michael Natterer)

	* gtk/gtkicontheme.c (gtk_icon_theme_lookup_icon): Correct the 
	download location for the hicolor icon theme. (#313475, Olexiy 
	Avramchenko)

	* gtk/gtkicontheme.c: Remove debug spew. 

2005-08-15  Owen Taylor  <otaylor@redhat.com>

	* gdk/linux-fb/gdkwindow-fb.c (gdk_window_set_back_pixmap): 
	* gdk/win32/gdkwindow-win32.c (gdk_window_set_back_pixmap): 
	* gdk/x11/gdkwindow-x11.c (gdk_window_set_back_pixmap):
	Handle pixmap == NULL when checking for a colormap.
	(Allin Cottrell).

2005-08-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c: Store only one copy of the pixel data
	for symlinked icons. To achieve this, maintain a hashtable 
	mapping pathnames to pixel data, and share the pixel data for
	all symlinks resolving to the same pathname. When writing out
	the image data, write out the pixel data only the first time
	it is met, and store the offset pointing to the first copy
	for use in all later cases.
	This reduces the size of the Bluecurve icon cache from 40
	to 13MB. (#312972)

2005-08-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.8.0 ===

	* NEWS: Updates

	* configure.in: Require cairo 0.9.2

2005-08-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcheckmenuitem.c (gtk_real_check_menu_item_draw_indicator): 
	Remove a line without effect.

	* gtk/gtkicontheme.c: When changing the icon theme, defer
	the resetting of rc styles to an idle, so that it does
	not happen e.g during expose handling (which is problematic,
	since some widgets, like the toolbar, are changing the