@@ -278,36 +278,61 @@ menu_position_func (GtkMenu           *menu,
                     GtkMenuToolButton *button)
 {
   GtkMenuToolButtonPrivate *priv = button->priv;
+  GtkWidget *widget = GTK_WIDGET (button);
   GtkRequisition req;
   GtkRequisition menu_req;
   GtkOrientation orientation;
   GtkTextDirection direction;
+  GdkRectangle monitor;
+  gint monitor_num;
+  GdkScreen *screen;
 
-  gdk_window_get_origin (GTK_BUTTON (priv->arrow_button)->event_window, x, y);
-  gtk_widget_size_request (priv->arrow_button, &req);
   gtk_widget_size_request (GTK_WIDGET (priv->menu), &menu_req);
 
   orientation = gtk_tool_item_get_orientation (GTK_TOOL_ITEM (button));
-  direction = gtk_widget_get_direction (GTK_WIDGET (priv->arrow_button));
+  direction = gtk_widget_get_direction (widget);
+
+  screen = gtk_widget_get_screen (GTK_WIDGET (menu));
+  monitor_num = gdk_screen_get_monitor_at_window (screen, widget->window);
+  if (monitor_num < 0)
+    monitor_num = 0;
+  gdk_screen_get_monitor_geometry (screen, monitor_num, &monitor);
 
   if (orientation == GTK_ORIENTATION_HORIZONTAL)
     {
+      gdk_window_get_origin (widget->window, x, y);
+      *x += widget->allocation.x;
+
       if (direction == GTK_TEXT_DIR_LTR)
-        *x += priv->arrow_button->allocation.width - req.width;
+	*x += MAX (widget->allocation.width - menu_req.width, 0);
+      else if (menu_req.width > widget->allocation.width)
+        *x -= menu_req.width - widget->allocation.width;
+
+      if ((*y + priv->arrow_button->allocation.height + menu_req.height) <= monitor.y + monitor.height)
+	*y += priv->arrow_button->allocation.height;
+      else if ((*y - menu_req.height) >= monitor.y)
+	*y -= menu_req.height;
+      else if (monitor.y + monitor.height - (*y + priv->arrow_button->allocation.height) > *y)
+	*y += priv->arrow_button->allocation.height;
       else
-        *x += req.width - menu_req.width;
-      *y += priv->arrow_button->allocation.height;
+	*y -= menu_req.height;
     }
   else 
     {
+      gdk_window_get_origin (GTK_BUTTON (priv->arrow_button)->event_window, x, y);
+      gtk_widget_size_request (priv->arrow_button, &req);
+
       if (direction == GTK_TEXT_DIR_LTR)
         *x += priv->arrow_button->allocation.width;
       else 
         *x -= menu_req.width;
-      *y += priv->arrow_button->allocation.height - req.height;
+
+      if (*y + menu_req.height > monitor.y + monitor.height &&
+	  *y + priv->arrow_button->allocation.height - monitor.y > monitor.y + monitor.height - *y)
+	*y += priv->arrow_button->allocation.height - menu_req.height;
     }
 
-  *push_in = TRUE;
+  *push_in = FALSE;
 }
 
 static void
